simple card design

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tailwind Project</title>
-    <link rel="stylesheet" href="./output/tailwind.css" />
-  </head>
-  <body>
-    <div class="">Hello</div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Tailwind Project</title>
+		<link rel="stylesheet" href="./output/tailwind.css" />
+	</head>
+	<body class="h-screen flex items-center justify-center bg-gray-200">
+		<div class="max-w-sm mx-auto p-8 bg-white rounded-xl space-y-2">
+			<img class="h-32 mx-auto rounded-full ring-4 ring-gray-600" src="/image/sabbir001.jpg" alt="image" />
+			<div class="text-center space-y-2">
+				<div class="space-y-0.5">
+					<p class="text-lg text-black font-semibold">My name is Sabbir Ahmmed</p>
+					<p class="text-gray-500 font-medium">You can follow my social media</p>
+				</div>
+				<button class="px-4 py-1 border border-purple-300 rounded-full text-md font-semibold">visit now</button>
+			</div>
+		</div>
+	</body>
 </html>
