--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<link rel="stylesheet" href="./output/tailwind.css" />
 	</head>
 	<body class="h-screen flex items-center justify-center bg-gray-200">
-		<div class="max-w-sm mx-auto p-8 bg-white rounded-xl space-y-2">
-			<img class="h-32 mx-auto rounded-full ring-4 ring-gray-600" src="/image/sabbir001.jpg" alt="image" />
-			<div class="text-center space-y-2">
+		<div class="max-w-sm sm:max-w-lg mx-auto p-8 bg-white rounded-xl space-y-2 sm:flex sm:items-center  sm:space-y-0 sm:space-x-6">
+			<img class="h-24 mx-auto rounded-full ring-4 ring-gray-600 sm:x-0 sm:flex-shrink-0" src="/image/sabbir001.jpg" alt="image" />
+			<div class="text-center space-y-2 sm:text-left">
 				<div class="space-y-0.5">
 					<p class="text-lg text-black font-semibold">My name is Sabbir Ahmmed</p>
 					<p class="text-gray-500 font-medium">You can follow my social media</p>
