--- a/index.html
+++ b/index.html
@@ -8,14 +8,28 @@
 		<link rel="stylesheet" href="./output/tailwind.css" />
 	</head>
 	<body class="h-screen flex items-center justify-center bg-gray-200">
-		<div class="max-w-sm sm:max-w-lg mx-auto p-8 bg-white rounded-xl space-y-2 sm:flex sm:items-center  sm:space-y-0 sm:space-x-6">
-			<img class="h-24 mx-auto rounded-full ring-4 ring-gray-600 sm:x-0 sm:flex-shrink-0" src="/image/sabbir001.jpg" alt="image" />
+		<div
+			class="max-w-sm sm:max-w-lg mx-auto p-8 bg-white rounded-xl space-y-2 sm:flex sm:items-center sm:space-y-0 sm:space-x-6"
+		>
+			<img
+				class="h-24 mx-auto rounded-full ring-4 ring-gray-600 sm:x-0 sm:flex-shrink-0 transform hover:scale-105 duration-500"
+				src="/image/sabbir001.jpg"
+				alt="image"
+			/>
 			<div class="text-center space-y-2 sm:text-left">
 				<div class="space-y-0.5">
-					<p class="text-lg text-black font-semibold">My name is Sabbir Ahmmed</p>
-					<p class="text-gray-500 font-medium">You can follow my social media</p>
+					<p class="text-lg text-black font-semibold">
+						My name is Sabbir Ahmmed
+					</p>
+					<p class="text-gray-500 font-medium">
+						You can follow my social media
+					</p>
 				</div>
-				<button class="px-4 py-1 border border-purple-300 rounded-full text-md font-semibold">visit now</button>
+				<button
+					class="px-4 py-1 border border-purple-300 rounded-full text-md font-semibold hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2"
+				>
+					visit now
+				</button>
 			</div>
 		</div>
 	</body>
